<resources>
    <string name="app_name">My Price Watcher</string>
    <string name="itemName">Item: </string>
    <string name="initalPrice">Starting Price: </string>
    <string name="currentPrice">Current Price: </string>
    <string name="percent">Percent: </string>
    <string name="but">Update</string>
    <string name="launch">Launch To Website</string>
    <string name="linkpassed">Link: </string>
    <string name="browse">Browse</string>
</resources>
